GL/src/test/deca/codegen/valid/deca_sans_objet/while/while_imbrique.ass
; start main program
	TSTO #4
	BOV stack_overflow_error
	ADDSP #4
; Construction de la VTable de de Object
	LOAD #null, R0	;     // On garde Dans R0 l'addr de la classe Object pour eviter de le loader a chaque fois !! 
	STORE R0, 1(GB)
	LOAD code.Object.equals, R1	;     // On garde Dans R1 le label 'code.Object.equals' pour la meme raison 
	STORE R1, 2(GB)
; Variable Declarations : 
; Beginning of main instructions:
	LOAD #1, R0
	STORE R0, 3(GB)
	BRA E_Cond.1
E_Debut.1:
	LOAD #1, R0
	STORE R0, 4(GB)
	BRA E_Cond.2
E_Debut.2:
	LOAD 3(GB), R2
	LOAD 4(GB), R3
	MUL R3, R2
	LOAD R2, R1
	WINT
	LOAD 4(GB), R2
	ADD #1, R2
	STORE R2, 4(GB)
E_Cond.2:
	LOAD 4(GB), R2
	CMP #2, R2
	BLE E_Debut.2
	LOAD 3(GB), R2
	ADD #1, R2
	STORE R2, 3(GB)
E_Cond.1:
	LOAD 3(GB), R2
	CMP #2, R2
	BLE E_Debut.1
	HALT
; end main program
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	SEQ R1
	RTS
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
